--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>💑 Nosotros 💑</h1>
+    <h1>💑 Azul-Fede 💑</h1>
     <p>Estamos juntos hace:</p>
     <div id="contador" class="contador"></div>
     <p class="mensaje">"Cada día contigo es el mejor de mi vida."</p>
